--- a/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
+++ b/CW17/thur/com_proj/TaskManagement/templates/taskmanager/view_all.html
@@ -74,38 +74,43 @@
             {#                <h3 class="text-center">Done</h3>#}
             {% for task in page_obj %}
                 {% if task.status == 'd' %}
-                    <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
-                        <div class="card my-3">
+                    <div class="card my-3">
+                        <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
                             <div class="card-header bg-success">
                                 {{ task.get_status_display }}
                             </div>
-                            <div class="card-body">
-                                <blockquote class="blockquote mb-0">
-                                    <p>{{ task.title }}</p>
-                                    <footer class="blockquote-footer">{{ task.due_date }}</footer>
-                                </blockquote>
-                            </div>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#{{ task.id }}">
-                                Delete
-                            </button>
-                            <div class="modal fade" id="{{ task.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>Are you sure you want to delete {{ task.name }} permanently?</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <a href="{% url 'delete_task' task.id %}"><button class="btn btn-danger" type="submit">Delete</button></a>
-                                        </div>
+                        </a>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p>{{ task.title }}</p>
+                                <footer class="blockquote-footer">{{ task.due_date }}</footer>
+                            </blockquote>
+                        </div>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete {{ task.name }} permanently?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="{% url 'delete_task' task.id %}">
+                                            <button class="btn btn-danger" type="submit">Delete</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 {% endif %}
             {% endfor %}
         </div>
@@ -113,78 +118,88 @@
             {#                <h3 class="text-center">To Do</h3>#}
             {% for task in page_obj %}
                 {% if task.status == 't' %}
-                    <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
-                        <div class="card my-3">
+                    <div class="card my-3">
+                        <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
                             <div class="card-header bg-primary">
                                 {{ task.get_status_display }}
                             </div>
-                            <div class="card-body">
-                                <blockquote class="blockquote mb-0">
-                                    <p>{{ task.title }}</p>
-                                    <footer class="blockquote-footer">{{ task.due_date }}</footer>
-                                </blockquote>
-                            </div>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Delete
-                            </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>Are you sure you want to delete {{ task.name }} permanently?</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <a href="{% url 'delete_task' task.id %}"><button class="btn btn-danger" type="submit">Delete</button></a>
-                                        </div>
+                        </a>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p>{{ task.title }}</p>
+                                <footer class="blockquote-footer">{{ task.due_date }}</footer>
+                            </blockquote>
+                        </div>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete {{ task.name }} permanently?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="{% url 'delete_task' task.id %}">
+                                            <button class="btn btn-danger" type="submit">Delete</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
+                    </div>
                 {% endif %}
             {% endfor %}
         </div>
         <div class="col-lg-3 col-md-5 col-sm-6 col-12 mb-4">
-{#                            <h3 class="text-center">Did Not Finish</h3>#}
+            {#                            <h3 class="text-center">Did Not Finish</h3>#}
             {% for task in page_obj %}
                 {% if task.status == 'dnf' %}
 
-                        <div class="card my-3">
-                            <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
+                    <div class="card my-3">
+                        <a href="{% url 'task_detail' task.id %}" style="text-decoration: none; color: black">
                             <div class="card-header bg-danger">
                                 {{ task.get_status_display }}
                             </div>
-                            </a>
-                            <div class="card-body">
-                                <blockquote class="blockquote mb-0">
-                                    <p>{{ task.title }}</p>
-                                    <footer class="blockquote-footer">{{ task.due_date }}</footer>
-                                </blockquote>
-                            </div>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                Delete
-                            </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <p>Are you sure you want to delete {{ task.name }} permanently?</p>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <a href="{% url 'delete_task' task.id %}"><button class="btn btn-danger" type="submit">Delete</button></a>
-                                        </div>
+                        </a>
+                        <div class="card-body">
+                            <blockquote class="blockquote mb-0">
+                                <p>{{ task.title }}</p>
+                                <footer class="blockquote-footer">{{ task.due_date }}</footer>
+                            </blockquote>
+                        </div>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                data-bs-target="#exampleModal">
+                            Delete
+                        </button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure?</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Are you sure you want to delete {{ task.name }} permanently?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="{% url 'delete_task' task.id %}">
+                                            <button class="btn btn-danger" type="submit">Delete</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
                 {% endif %}
             {% endfor %}
         </div>
@@ -202,7 +217,8 @@
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Due date:</label>
-                            <input required type="date" class="form-control" placeholder="e.g. Some Title" name="due_date">
+                            <input required type="date" class="form-control" placeholder="e.g. Some Title"
+                                   name="due_date">
                         </div>
                         <div class="form-group py-2">
                             <label class="py-1">Enter Status:</label>
